@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  {
    namespace ontroller {
      class controller.CalendarViewController {
          + currentDayOfWeek : LocalDate
          + endDayOfWeek : LocalDate
          - course : TextField
          - date1 : Text
          - date2 : Text
          - day : TextField
          - day1 : Text
          - day2 : Text
          - day3 : Text
          - day4 : Text
          - day5 : Text
          - day6 : Text
          - day7 : Text
          - end : TextField
          - navCalendar : AnchorPane
          - nextWeekButton : Button
          - previousWeekButton : Button
          - root : Region
          - scrollpane : ScrollPane
          - start : TextField
          + CreateCalendarViewController()
          + addLesson()
          + getRoot()
          + init()
          + initCalendar()
          + initDates()
          + initDayForAll()
          + initDayText()
          + initNavCallendar()
          + navViewNextWeek()
          + navViewPrevWeek()
          + onAddLessonClick()
          + onChooseFileButton()
          + onNextWeekClick()
          + onPreviousWeekClick()
          + reset()
      }
    }
  }
  

  namespace  {
    namespace ontroller {
      class controller.RoomListController {
          - list : ListView
          - root : Region
          - scene : Scene
          - stage : Stage
          + SwitchToScreen1()
          + displayRooms()
      }
    }
  }
  

  controller.CalendarViewController o-- model.Model : model
  controller.CalendarViewController o-- view.NavCalendarView : navCalendarView
  controller.CalendarViewController o-- view.ViewHandler : viewHandler
  controller.RoomListController o-- model.rooms.RoomList : rooms


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
